--- a/singolo1.html
+++ b/singolo1.html
@@ -4,8 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Singolo</title>
+  <link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="wrapper">
+      <h1 class="logo">SINGOLO<span>*</span></h1>
+      <nav class="header__navigation">
+        <ul class="navigation">
+          <li>HOME</li>
+          <li>SERVICES</li>
+          <li>PORTFOLIO</li>
+          <li>ABOUT</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section></section>
+  <main></main>
 </body>
 </html>
