feat: add portfolio top section. Add portfolio navigation
Add portfolio header and description. Add potfolio navigation (demo)

--- a/singolo2.html
+++ b/singolo2.html
@@ -11,7 +11,27 @@
     <!--Portfolio start here-->
     <section class="portfolio">
       <div class="wrapper">
-        
+        <div class="portfolio__top">
+          <h2>Portfolio</h2>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia 
+            odio sem nec elit.</p>
+        </div>
+        <div class="portfolio__navigation">
+          <ul class="navigation_portfolio">
+            <li class="navigation_portfolio_item">
+              <a href="#">All</a>
+            </li>
+            <li class="navigation_portfolio_item">
+              <a href="#">Web Design</a>
+            </li>
+            <li class="navigation_portfolio_item">
+              <a href="#">Graphic Design</a>
+            </li>
+            <li class="navigation_portfolio_item">
+              <a href="#">Artwork</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <!--About-us start here-->
