feat: finished singolo task part2.
Add singolo2.html and singolo2.css files. Add some images and fonts.

--- a/singolo2.html
+++ b/singolo2.html
@@ -17,27 +17,163 @@
             odio sem nec elit.</p>
         </div>
         <div class="portfolio__navigation">
-          <ul class="navigation_portfolio">
-            <li class="navigation_portfolio_item">
-              <a href="#">All</a>
+          <ul class="navigation-cover">
+            <li class="portfolio__navigation_button navigation_button-active">
+              <a>All</a>
             </li>
-            <li class="navigation_portfolio_item">
-              <a href="#">Web Design</a>
+            <li class="portfolio__navigation_button">
+              <a>Web Design</a>
             </li>
-            <li class="navigation_portfolio_item">
-              <a href="#">Graphic Design</a>
+            <li class="portfolio__navigation_button">
+              <a>Graphic Design</a>
             </li>
-            <li class="navigation_portfolio_item">
-              <a href="#">Artwork</a>
+            <li class="portfolio__navigation_button">
+              <a>Artwork</a>
             </li>
           </ul>
+        </div>
+        <div class="portfolio__items">
+          <figure class="portfolio__item">
+            <img src="assets/example_1.png" width="220px" height="187px" alt="example_1">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_2.png" width="220px" height="187px" alt="example_2">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_3.png" width="220px" height="187px" alt="example_3">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_4.png" alt="example_4">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_5.png" alt="example_5">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_6.png" alt="example_6">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_7.png" alt="example_7">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_8.png" alt="example_8">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_9.png" alt="example_9">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_10.png" alt="example_10">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_11.png" alt="example_11">
+          </figure>
+          <figure class="portfolio__item">
+            <img src="assets/example_12.png" alt="example_12">
+          </figure>
         </div>
       </div>
     </section>
     <!--About-us start here-->
     <section class="about-us">
       <div class="wrapper">
-        
+        <div class="about-us__top">
+          <h2>About Us</h2>
+          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia 
+            odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris 
+            condimentum nibh.</p>
+        </div>
+        <div class="about-us__items">
+          <div class="about-us__item">
+            <img src="assets/photo_1.png" alt="Adam Jensen">
+            <h3>Adam Jensen</h3>
+            <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, 
+              nec rutrum tellus dolor id lorem.</p>
+            <div class="item_social-tags">
+              <ul class="social-tags">
+                <li class="social-tag">
+                  <a href="https://ru-ru.facebook.com/" target="blank">
+                    <span class="icon-facebook"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://plus.google.com/" target="blank">
+                    <span class="icon-plus-google"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://twitter.com/" target="blank">
+                    <span class="icon-twitter"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://www.linkedin.com/" target="blank">
+                    <span class="icon-linkedin"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="about-us__item">
+            <img src="assets/photo_2.png" alt="Desmond Miles">
+            <h3>Desmond Miles</h3>
+            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam 
+              laoreet, viverra lacus ut, ultrices velit.</p>
+            <div class="item_social-tags">
+              <ul class="social-tags">
+                <li class="social-tag">
+                  <a href="https://ru-ru.facebook.com/" target="blank">
+                    <span class="icon-facebook"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://plus.google.com/" target="blank">
+                    <span class="icon-plus-google"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://twitter.com/" target="blank">
+                    <span class="icon-twitter"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://www.linkedin.com/" target="blank">
+                    <span class="icon-linkedin"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="about-us__item">
+            <img src="assets/photo_3.png" alt="Scolara Visari">
+            <h3>Scolara Visari</h3>
+            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et 
+              consequat felis. Quisque condimentum.</p>
+            <div class="item_social-tags">
+              <ul class="social-tags">
+                <li class="social-tag">
+                  <a href="https://ru-ru.facebook.com/" target="blank">
+                    <span class="icon-facebook"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://plus.google.com/" target="blank">
+                    <span class="icon-plus-google"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://twitter.com/" target="blank">
+                    <span class="icon-twitter"></span>
+                  </a>
+                </li>
+                <li class="social-tag">
+                  <a href="https://www.linkedin.com/" target="blank">
+                    <span class="icon-linkedin"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
